--- a/client/src/Pages/HomePage.css
+++ b/client/src/Pages/HomePage.css
@@ -10,6 +10,7 @@
     font-size: 4rem;
     font: 400 4rem 'Open Sans', sans-serif;
     border-radius: 50px;
+    text-align: center;
   }
 
   .homepage-h2 {  
@@ -23,7 +24,9 @@
     justify-content: center;
     font-size: 2.5rem;
     font: 400 2.5rem 'Open Sans', sans-serif;
-    border-radius: 50px;}
+    border-radius: 50px;
+    text-align: center;
+    }
 
     .searchform-button {
         padding: 10px 10 px;
@@ -33,6 +36,10 @@
         background: rgb(240,238,227);
         background: radial-gradient(circle, rgba(240,238,227,1) 63%, rgba(173,180,182,1) 100%);
         color: #616161;
+    }
+
+    #noResults {
+        font: white;
     }
 
     @media (max-width: 768px) {
